retrieveUnpackaged/objects/Individual.object
<CustomObject>
    <fields>
        <fullName>BirthCity__c</fullName>
        <label>Birth City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Gender__c</fullName>
        <label>Gender</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>M</fullName>
                    <label>Male</label>
                </value>
                <value>
                    <fullName>F</fullName>
                    <label>Female</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>NationalIdentityNumber__c</fullName>
        <externalId>true</externalId>
        <label>National Identity Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TechnicalDetails__c</fullName>
        <label>Technical Details</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>